# pytest-doctest-bug

./: README.md  failing.py  pyproject.toml  working.py
