[project]
name = "pytest-doctest-bug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
doctest_optionflags = "NUMBER ELLIPSIS"
    # NUMBER: round floats
    # ELLIPSIS: allow ... to shorten outputs in non-exception output